Добавлена авторизация на фронте
